--- a/css/index.css
+++ b/css/index.css
@@ -18,8 +18,17 @@ h5 {
 }
 
 /* Typography */
+:root {
+  --member-card-bg-color:    
+;
+}
 body {
   font-size: 62.5%;
+}
+
+svg {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 /* Contents */
@@ -39,19 +48,65 @@ body {
   flex-direction: column;
 }
 
+.main-header h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 4rem;
+}
+
+/*슬라이더 섹션 css*/
 .swiper {
-  width: 80rem;
-  height: 300px;
-}
-main {
-  margin: 5rem auto;
-}
-main > canvas {
-  width: 40rem !important;
-  height: 20rem !important;
+  width: 90rem;
+  height: 400px;
 }
 
 .swiper-slide {
   box-shadow: inset 0 0 20px purple;
   box-sizing: border-box;
+}
+
+/* 멤버 카드 섹션 css*/
+.member-section {
+  margin: 10rem auto 0;
+  max-width: 80rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.member-section .member-section__cards {
+  max-width: 60rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.member-section .member-section__cards h1 {
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: bold;
+  width: 100%;
+}
+.member-section .member-section__cards > div {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 50rem;
+  margin: 0 auto;
+  justify-content: center;
+}
+.member-section .member-section__cards .member-section__card {
+  width: 10rem;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+}
+
+/* 좋아요 섹션 css*/
+
+.member-section__likes {
+  margin-top: 5rem;
+}
+
+.member > canvas {
+  width: 40rem !important;
+  height: 20rem !important;
 }
