--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ body {
 }
 
 .member-section .member-section__cards {
-  max-width: 80rem;
+  max-width: 100rem;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -89,7 +89,7 @@ body {
 
 .member-section .member-section__cards h1 {
   text-align: center;
-  font-size: 2.4rem;
+  font-size: 4rem;
   font-weight: bold;
   width: 100%;
   color: var(--title-font-color);
@@ -98,17 +98,16 @@ body {
 .member-section .member-section__cards > div {
   display: flex;
   flex-wrap: wrap;
-  max-width: 80rem;
-  margin: 0 auto;
+  margin: 2rem auto 0;
   justify-content: center;
+  gap: 2rem;
 }
 
 .member-section .member-section__cards .member-section__card {
-  width: 20rem;
+  width: 22rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  margin: 2rem;
   background-color: var(--member-card-bg-color);
   border-radius: 0.5rem;
 }
@@ -130,7 +129,7 @@ body {
 }
 
 .member-section .member-section__cards .member-section__card .member-section__card__info > div {
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
 }
 
@@ -158,7 +157,7 @@ body {
 .member-section .member-section__cards .member-section__card .member-section__card__info > div > div > span {
   color: var(--member-card-font-color);
   font-family: "Dongle", sans-serif;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
 }
 
 /* 좋아요 섹션 css*/
