--- a/css/yeol.css
+++ b/css/yeol.css
@@ -390,23 +390,20 @@ textarea:focus {
   padding: 2rem;
   margin: auto;
   width: 40%;
-  max-height: 17rem;
-  height: 45%;
+  height: 25rem;
 }
 
 .update-modal__form {
   max-height: unset;
   width: 60%;
-  height: 60%;
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  margin: auto;
 }
 
 .delete-modal__form h1,
 .update-modal__form h1 {
-  font-size: 2.4rem;
+  font-size: 4rem;
   text-align: center;
   color: var(--strong-cyan);
 }
@@ -475,7 +472,7 @@ textarea:focus {
 .update-modal__form__btn-group button {
   font-size: 1.6rem;
   font-weight: 700;
-  padding: calc(5% - 1rem) 10%;
+  padding: calc(1% + 0.5rem) 5%;
   border-radius: 0.5rem;
   transition:
     color 0.3s ease-in,
