권경열 개인페이지 image 수정

--- a/css/index.css
+++ b/css/index.css
@@ -110,6 +110,7 @@ body {
   flex-direction: column;
   background-color: var(--member-card-bg-color);
   border-radius: 0.5rem;
+  overflow: hidden;
 }
 
 .member-section .member-section__cards .member-section__card > a > img {
