--- a/css/jihyun.css
+++ b/css/jihyun.css
@@ -21,6 +21,7 @@
 /* General Setting */
 
 body {
+  position: relative;
   font-family: "IBM Plex Sans KR", sans-serif;
   font-size: var(--body);
   background-color: var(--black);
@@ -117,7 +118,7 @@ body {
   background-color: var(--black);
   color: var(--white);
   font-weight: 700;
-  border-radius: 20px;
+  border-radius: 30px;
   width: fit-content;
   margin: 10px auto 20px auto;
 }
@@ -134,34 +135,48 @@ body {
 }
 
 .card-main-section .card-title-container li:focus {
-  background-color: var(--primary);
+  background-color: var(--secondary);
+  color: var(--black);
   border-radius: 20px;
 }
 
-.card-main-section .card-main-container {
-}
-.card-main-section .card-main-container .card-title {
-}
 .card-main-section .card-main-container .card-contents {
+  line-height: 1.3;
+  margin-bottom: 20px;
 }
 .card-main-section .card-main-container .tag-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 .card-main-section .card-main-container .tag-container .tag {
+  font-weight: 600;
+  border: 1px solid var(--black);
+  margin: 0 8px 8px 0;
+  padding: 6px 12px;
+  border-radius: 15px;
+  background-color: var(--secondary);
 }
 
 /* Board Form Section */
 
 .board-form-container {
+  box-sizing: border-box;
   border: 1px solid var(--gray);
+  width: 700px;
   border-radius: 20px;
   padding: 30px;
-  margin-top: 30px;
+  margin: 0 auto 50px auto;
 }
 .board-form-container .board-form-title {
   margin-bottom: 30px;
   font-size: var(--h3);
   font-weight: 700;
   color: var(--white);
+}
+.board-form-container .board-err-message {
+  margin-bottom: 10px;
+  font-weight: 700;
+  color: var(--secondary);
 }
 .board-form-container .board-form {
   display: flex;
@@ -172,9 +187,11 @@ body {
 .board-form-container .board-form .user-info-container {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  /* gap: 10px; */
 }
-
+.board-form-container .board-form .user-info-container .user-name {
+  margin-right: 10px;
+}
 .board-form-container .board-form .user-info-container .input-field {
   width: 100%;
   height: 35px;
@@ -220,8 +237,6 @@ body {
   align-items: center;
   margin-top: 15px;
 }
-.board-form-container .board-form .form-submit-btn-container .form-submit {
-}
 
 /* Borad Contents Section */
 .board-contents-section {
@@ -261,6 +276,7 @@ body {
   border-bottom-left-radius: 30px;
   grid-column: 1 / span 3;
   padding: 20px;
+  line-height: 1.3;
 }
 .board-contents-section .board-data-container .created-date-data {
   font-size: var(--caption);
@@ -275,6 +291,7 @@ body {
   width: 40px;
   height: 40px;
   margin: 10px;
+  border: 1px solid transparent;
   border-radius: 50%;
   text-align: center;
   color: var(--white);
@@ -284,10 +301,6 @@ body {
   grid-row: 1 / span 1;
 }
 
-.board-contents-section .board-data-container .delete-btn:hover {
-  background-color: var(--secondary);
-}
-
 .board-contents-section .board-data-container .edit-btn {
   display: flex;
   justify-content: center;
@@ -295,6 +308,7 @@ body {
   width: 40px;
   height: 40px;
   margin: 10px;
+  border: 1px solid transparent;
   border-radius: 50%;
   text-align: center;
   color: var(--white);
@@ -304,7 +318,17 @@ body {
   grid-row: 1 / span 1;
 }
 
-/* Check Password Modal */
+.board-contents-section .board-data-container .delete-btn:hover,
+.board-contents-section .board-data-container .edit-btn:hover {
+  background-color: var(--secondary);
+}
+
+/* Delete Modal */
+.delete-modal {
+  position: absolute;
+  z-index: 2;
+}
+
 .check-password-form {
   display: flex;
   flex-direction: column;
@@ -312,7 +336,7 @@ body {
   align-items: center;
   width: 500px;
   height: 500px;
-  background-color: #ff9454;
+  background-color: var(--black);
   margin: 0 auto;
   border-radius: 10px;
 }
@@ -326,9 +350,11 @@ body {
   padding: 0 10px;
 }
 .check-password-form .delete-password-input:focus {
-  border: 1px solid var(--black);
+  border: 2px solid var(--primary);
   border-radius: 5px;
   padding: 0 10px;
+}
+.check-password-form .password-message {
 }
 .check-password-form .delete-btn-container {
 }
@@ -365,4 +391,15 @@ body {
 /* 소개 숨기기 */
 .hidden {
   display: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black);
+  opacity: 0.8;
+  z-index: 1;
 }
