--- a/css/reset.css
+++ b/css/reset.css
@@ -18,6 +18,7 @@ time, mark, audio, video {
 	font-family: 'Nanum Gothic', sans-serif;
 	vertical-align: baseline;
 	box-sizing: border-box;
+	text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
