--- a/css/kang.css
+++ b/css/kang.css
@@ -22,10 +22,11 @@ body {
 }
 
 .wrap #header .hd-team-name {
+    width: 500px;
     font-size: 3rem;
     font-weight: 300;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 0 0 30px 250px;
     color: #ff7675;
 }
 
