--- a/css/yeol.css
+++ b/css/yeol.css
@@ -237,9 +237,7 @@ textarea:focus {
   border-radius: 0.2rem;
   position: absolute;
 
-  transition:
-    background-color 0.2s ease-in,
-    color 0.2s ease-in;
+  transition: background-color 0.2s ease-in, color 0.2s ease-in;
 }
 
 .comment-form button {
@@ -485,9 +483,7 @@ textarea:focus {
   font-weight: 700;
   padding: calc(1% + 0.5rem) 5%;
   border-radius: 0.5rem;
-  transition:
-    color 0.3s ease-in,
-    background-color 0.3s ease-in;
+  transition: color 0.3s ease-in, background-color 0.3s ease-in;
 }
 
 .update-modal__form .update-input__group label {
