--- a/css/chang.css
+++ b/css/chang.css
@@ -7,6 +7,14 @@
     font-family: 'Gowun Dodum', sans-serif;
 }
 
+a {
+    color: unset;
+    text-decoration: unset;
+}
+ a:hover {
+    color: unset;
+ }
+
 body {
     background-color: #f5f5f5;
 }
@@ -35,7 +43,6 @@ h1 {
     padding: 3.5em 1em;
     border-radius: 0.6em;
     color: #1f003b;
-    cursor: pointer;
     transition: 0.3s;
     background-color: #ffffff;
 }
@@ -97,6 +104,35 @@ h1 {
 }
 
 /* guestbook */
-.content {
-    font-size: 20px
+#guestbooklabel {
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 0 2.2em rgba(25, 0, 58, 0.1);
+    padding: 0.5em 1em;
+    border-radius: 0.6em;
+    color: #1f003b;
+    transition: 0.3s;
+    background-color: #ffffff;
+}
+#guestbooklabel:hover {
+    background: linear-gradient(#84d2ff, #8d5acd);
+    color: black;
+}
+#w_1 {
+    font-size: 1.5rem;
+}
+#c_1 {
+    font-size: 1.3rem;
+}
+#list {
+    box-shadow: 0 0 2.2em rgba(25, 0, 58, 0.1);
+    padding: 3.5em 1em;
+    border-radius: 0.6em;
+    color: #1f003b;
+    transition: 0.3s;
+    background-color: #ffffff;
+}
+#list:hover {
+    background: linear-gradient(#eb7e7e, #8567f7);
+    color: #ffffff;
 }
