--- a/css/choi.css
+++ b/css/choi.css
@@ -62,8 +62,14 @@ a {
 .profile{
     background-color: white;
     padding-top: 8px;
-    padding-left: 285px;
+    padding-left: 28%;
 }
+
+.profile img{
+    width: 60%;
+    border-radius: 50%;
+}
+
 .myname {
     background-color: rgb(240, 237, 255);
     color: rgb(129, 107, 255);
@@ -181,4 +187,22 @@ h5 {
 .writername{
     font-size: 15px;
     padding-left: 10px;
+}
+
+#w_1 {
+    font-size: small;
+}
+
+#c_1 {
+    word-wrap: break-word;
+    color: black;
+    width: 700px;
+    resize: none;
+    border-style: hidden;
+    margin: 5px;
+    border-radius: 7px;
+}
+
+#list{
+    margin: 10px 0px -5px 5px;
 }
