--- a/css/yeol.css
+++ b/css/yeol.css
@@ -57,9 +57,11 @@ textarea {
   --error-color: #e66767;
   --del-btn: #ea8685;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   font-family: "Nanum Gothic Coding", cursive;
   display: flex;
@@ -237,7 +239,9 @@ textarea:focus {
   border-radius: 0.2rem;
   position: absolute;
 
-  transition: background-color 0.2s ease-in, color 0.2s ease-in;
+  transition:
+    background-color 0.2s ease-in,
+    color 0.2s ease-in;
 }
 
 .comment-form button {
@@ -483,7 +487,9 @@ textarea:focus {
   font-weight: 700;
   padding: calc(1% + 0.5rem) 5%;
   border-radius: 0.5rem;
-  transition: color 0.3s ease-in, background-color 0.3s ease-in;
+  transition:
+    color 0.3s ease-in,
+    background-color 0.3s ease-in;
 }
 
 .update-modal__form .update-input__group label {
