--- a/css/index.css
+++ b/css/index.css
@@ -70,9 +70,9 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50% 50%;
-  width: 200px;
-  height: 100px;
-  margin: 50px 0 0 800px;
+  width: 13%;
+  height: 10%;
+  margin: 4rem 0 0 85rem;
 }
 
 .main-header .main-text {
@@ -80,9 +80,9 @@ body {
   background-image: url('/images/main/mainText.svg');
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 80px 0 0 80px;
-  width: 400px;
-  height: 250px;
+  margin: 8rem 0 0 8rem;
+  width: 300%;
+  height: 45%;
   z-index: 1;
 }
 
@@ -91,10 +91,9 @@ body {
   background-image: url(/images/main/maingText_02.svg);
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 70px 0 0 50px;
-  width: 600px;
-  height: 250px;
-  margin: 100px 0 0 400px;
+  margin: 5rem 0 0 40rem;
+  width: 55%;
+  height: 50%;
   z-index: 1000;
 }
 
@@ -103,10 +102,10 @@ body {
   background-image: url(/images/main/Design.png);
   background-repeat: no-repeat;
   background-size: contain;
-  height: 350px;
-  margin: -500px 0 0 200px;
-  width: 500px;
-  height: 500px;
+  height: 35%;
+  margin: -45rem 0 0 20rem;
+  width: 40%;
+  height: 45%;
   z-index: 100;
 }
 
