--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,7 @@ h5 {
   /* 각 타이트별 font color*/
   --title-font-color: black;
   --main-bg-color: #db0606;
+  --swiper-theme-color: #fbc531;
 }
 
 html {
@@ -57,22 +58,15 @@ body {
   background-color: var(--main-bg-color);
 }
 
-.main-header h1 {
-  text-align: center;
-  font-weight: bold;
-  font-size: 4rem;
-  color: var(--title-font-color);
-}
-
 .main-header .main-team-text {
   position: absolute;
   background-image: url("../images/main/B-02.svg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
   background-size: contain;
+  background-position: 50% 50%;
   width: 8%;
   height: 10%;
-  margin: 4rem 0 0 80rem;
+  margin: 4rem 0 0 90rem;
 }
 
 .main-header .main-text {
@@ -100,16 +94,16 @@ body {
   position: absolute;
   background-image: url("../images/main/Design.png");
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 50% 50%;
+  background-size: 100%;
   margin: -45rem 0 0 20rem;
-  width: 20%;
-  height: 30%;
+  width: 40%;
+  height: 60%;
   z-index: 1;
 }
 
 /*슬라이더 섹션 css*/
 .swiper {
+  margin-top: 3rem;
   width: 110rem;
   height: 40rem;
 }
