--- a/css/choi.css
+++ b/css/choi.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
-*{
-    font-family: 'Gowun Dodum', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+* {
+  font-family: "Gowun Dodum", sans-serif;
 }
 body,
 button,
@@ -32,65 +32,65 @@ ul {
 }
 
 body {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    line-height: 36px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  line-height: 36px;
 }
 
 .mainsite {
-    background-color: rgb(240, 237, 255);
-    margin-top : 10px;
+  background-color: rgb(240, 237, 255);
+  margin-top: 10px;
 }
 
 a {
-    background-color: rgb(240, 237, 255);
-    font-size: 30px;
-    text-decoration: none;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: rgb(129, 107, 255);
-    padding-bottom: 5px;
-    padding-top: 5px;
+  background-color: rgb(240, 237, 255);
+  font-size: 30px;
+  text-decoration: none;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: rgb(129, 107, 255);
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
-.profile{
-    background-color: white;
-    padding-top: 8px;
-    padding-left: 28%;
+.profile {
+  background-color: white;
+  padding-top: 8px;
+  padding-left: 28%;
 }
 
-.profile img{
-    background-color: green;
-    width: 60%;
-    border-radius: 50%;
+.profile img {
+  background-color: green;
+  width: 60%;
+  border-radius: 50%;
 }
 
 .myname {
-    background-color: rgb(240, 237, 255);
-    color: rgb(129, 107, 255);
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10px;
+  background-color: rgb(240, 237, 255);
+  color: rgb(129, 107, 255);
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .myResolution {
-    text-align: center;
+  text-align: center;
 }
 
 hr {
-    margin:0px;
+  margin: 0px;
 }
 .menubox {
-    margin: 5px;
+  margin: 5px;
 }
 
 .textbox {
@@ -135,70 +135,70 @@ h5 {
 }
 
 .tablebox {
-    margin-top: -20px;
-}
-
-.commentbox{
-    text-align: center;
-}
-
-.writer {
-    color : black;
-    font-size: small;
-    padding-left: 20px;
-    padding-top: 10px;
-}
-
-.password {
-    font-size: small;
-    padding-left: 30px;
-    padding-top: 10px;
-}
-
-.submit {
-    font-size: small;
-    padding-left: 30px;
-    padding-top: 10px;
+  margin-top: -20px;
 }
 
 .commentbox {
-    word-wrap: break-word;
-    color: black;
-    width: 700px;
-    resize: none;
-    border-style: hidden;
-    margin: 5px;
-    border-radius: 7px;
+  text-align: center;
 }
 
-.submitbtn{
-    margin-left: 160px;
+.writer {
+  color: black;
+  font-size: small;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+.password {
+  font-size: small;
+  padding-left: 30px;
+  padding-top: 10px;
+}
+
+.submit {
+  font-size: small;
+  padding-left: 30px;
+  padding-top: 10px;
+}
+
+.commentbox {
+  word-wrap: break-word;
+  color: black;
+  width: 700px;
+  resize: none;
+  border-style: hidden;
+  margin: 5px;
+  border-radius: 7px;
+}
+
+.submitbtn {
+  margin-left: 160px;
 }
 
 #d_1 {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .revise {
-    margin-left: 616px;
+  margin-left: 616px;
 }
 
-.revisecontent{
-    font-size: 15px;
-    padding-left: 20px;
-    padding-top: 10px;
+.revisecontent {
+  font-size: 15px;
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
-#editbtn{
-    margin-left: 348px;
+#editbtn {
+  margin-left: 348px;
 }
 
-#canclebtn{
-    margin-right: 5px;
+#canclebtn {
+  margin-right: 5px;
 }
-.writername{
-    font-size: 15px;
-    padding-left: 10px;
+.writername {
+  font-size: 15px;
+  padding-left: 10px;
 }
 
 .w_1 {
