--- a/css/index.css
+++ b/css/index.css
@@ -140,23 +140,21 @@ body {
 /* 멤버 카드 섹션 css*/
 .member-section {
   margin: 10rem auto 0;
-  max-width: 80rem;
+  max-width: 100rem;
   display: flex;
   flex-direction: column;
 }
 
 .member-section .member-section__cards > div:first-child {
   position: relative;
+  height: 75rem;
 }
-.member-section .member-section__cards > div:first-child > img {
-  width: 39.6rem;
-  height: 37.4rem;
-  bottom: 0;
-  right: 0;
+.member-section .member-section__cards > div:first-child > div {
   position: absolute;
+  top: 0;
+  left: 7.2rem;
 }
-
-.member-section .member-section__cards > div:first-child > h2 {
+.member-section .member-section__cards > div:first-child > div > h2 {
   font-size: 8rem;
   font-weight: bold;
   color: var(--member-card-sub-title-color);
@@ -164,7 +162,7 @@ body {
   font-family: var(--intel);
   margin: 0;
 }
-.member-section .member-section__cards > div:first-child > h1 {
+.member-section .member-section__cards > div:first-child > div > h1 {
   font-size: 14.5rem;
   font-weight: bold;
   color: var(--member-area-font-color);
@@ -173,20 +171,47 @@ body {
   margin-top: -1.5rem;
 }
 
-.member-section .member-section__cards > div:first-child span {
+.member-section .member-section__cards > div:first-child > div span {
   display: block;
   color: var(--member-area-font-color);
   font-size: 4rem;
   font-weight: bold;
   text-align: center;
 }
-.member-section .member-section__cards > div:first-child span strong {
+.member-section .member-section__cards > div:first-child > div span strong {
   color: var(--member-card-font-color);
 }
 
-.member-section .member-section__cards > div:first-child span:last-child {
+.member-section .member-section__cards > div:first-child > div span:last-child {
   margin-top: 5rem;
   font-size: 6rem;
+}
+
+.member-section .member-section__cards > div:first-child * {
+  z-index: 1;
+}
+.member-section .member-section__cards > div:first-child > div .loop-image {
+  width: 30rem;
+  height: 17rem;
+  position: absolute;
+  top: 6.8rem;
+}
+.member-section .member-section__cards > div:first-child > .spiral-image {
+  width: 10rem;
+  height: 10rem;
+  bottom: 19rem;
+  left: 36rem;
+  position: absolute;
+  z-index: 0;
+}
+
+.member-section .member-section__cards > div:first-child > .searching-image {
+  width: 32rem;
+  height: 30rem;
+  bottom: 0;
+  right: -5rem;
+  position: absolute;
+  z-index: 0;
 }
 
 .member-section .member-section__cards {
@@ -195,14 +220,6 @@ body {
   flex-direction: column;
   margin: 0 auto;
 }
-
-/*.member-section .member-section__cards h1 {
-  text-align: center;
-  font-size: 4rem;
-  font-weight: bold;
-  width: 100%;
-  color: var(--title-font-color);
-}*/
 
 .member-section .member-section__cards > div:last-child {
   display: flex;
@@ -217,13 +234,23 @@ body {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: var(--member-card-bg-color);
-  border-radius: 0.5rem;
   overflow: hidden;
 }
 
+.member-section .member-section__cards .member-section__card > span {
+  margin-bottom: 1rem;
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: var(--member-area-font-color);
+}
+
+.member-section .member-section__cards .member-section__card > div {
+  background-color: var(--member-area-font-color);
+  padding: 1rem;
+  box-shadow: -3px 5px 3px 2px black;
+}
+
 .member-section .member-section__cards .member-section__card .member-section__card-img {
-  border-radius: 0.5rem;
   width: 100%;
   height: 20rem;
   transition: scale 0.2s ease-in;
