--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ h5 {
   --intel: "Inter", sans-serif;
 
   /* 멤버 카드에 사용하는 컬러 변수*/
-  --member-card-bg-color: #fbc531;
+  --member-card-bg-color: #fff;
   --member-card-font-color: black;
   --member-area-font-color: #ffffff;
   --member-card-sub-title-color: rgba(255, 255, 255, 0.64);
@@ -38,6 +38,12 @@ h5 {
   --title-font-color: black;
   --main-bg-color: #db0606;
   --swiper-theme-color: #fbc531;
+
+  /*slider bg color*/
+  --slider-bg-color: #151717;
+
+  /*border radius*/
+  --main-border-radius: 1.2rem;
 }
 
 html {
@@ -66,7 +72,7 @@ body {
   background-color: var(--main-bg-color);
   position: relative;
   padding-bottom: 5rem;
-  border-radius: 1rem;
+  border-radius: var(--main-border-radius);
 }
 
 .main-header .main-header__temp {
@@ -107,7 +113,7 @@ body {
   background-image: url("../images/main/maingText_02.png");
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 10rem 0 0 40rem;
+  margin: 10rem 0 0 65rem;
   width: 55%;
   height: 50%;
   z-index: 2;
@@ -131,14 +137,37 @@ body {
 
 /*슬라이더 섹션 css*/
 .swiper {
-  margin-top: 5rem;
-  width: 110rem;
+  margin-top: 8rem;
+  width: 97%;
   height: 40rem;
+  border-radius: var(--main-border-radius);
+  overflow: hidden;
 }
 
 .swiper-slide {
-  box-shadow: inset 0 0 20px purple;
   box-sizing: border-box;
+  padding: 2rem 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--slider-bg-color);
+  color: var(--member-area-font-color);
+}
+
+.slide1-h1,
+.slide2-h1 {
+  color: var(--member-area-font-color) !important;
+  text-align: center;
+  font-weight: bold;
+  font-size: 5rem;
+}
+
+.slide1-p,
+.slide2-p {
+  font-size: 3rem;
+  line-height: 5rem;
+  font-weight: bold;
 }
 
 /* 멤버 카드 섹션 css*/
@@ -153,11 +182,13 @@ body {
   position: relative;
   height: 75rem;
 }
+
 .member-section .member-section__cards > div:first-child > div {
   position: absolute;
   top: 0;
   left: 7.2rem;
 }
+
 .member-section .member-section__cards > div:first-child > div > h2 {
   font-size: 8rem;
   font-weight: bold;
@@ -166,6 +197,7 @@ body {
   font-family: var(--intel);
   margin: 0;
 }
+
 .member-section .member-section__cards > div:first-child > div > h1 {
   font-size: 14.5rem;
   font-weight: bold;
@@ -182,6 +214,7 @@ body {
   font-weight: bold;
   text-align: center;
 }
+
 .member-section .member-section__cards > div:first-child > div span strong {
   color: var(--member-card-font-color);
 }
@@ -194,12 +227,14 @@ body {
 .member-section .member-section__cards > div:first-child * {
   z-index: 1;
 }
+
 .member-section .member-section__cards > div:first-child > div .loop-image {
   width: 30rem;
   height: 17rem;
   position: absolute;
   top: 6.8rem;
 }
+
 .member-section .member-section__cards > div:first-child > .spiral-image {
   width: 10rem;
   height: 10rem;
@@ -243,15 +278,16 @@ body {
 
 .member-section .member-section__cards .member-section__card > span {
   margin-bottom: 1rem;
-  font-size: 2.4rem;
+  font-size: 3.5rem;
   font-weight: bold;
   color: var(--member-area-font-color);
 }
 
 .member-section .member-section__cards .member-section__card > div {
-  background-color: var(--member-area-font-color);
+  background-color: var(--member-card-bg-color);
   padding: 1rem;
   box-shadow: -3px 5px 3px 2px black;
+  border-radius: var(--main-border-radius);
 }
 
 .member-section .member-section__cards .member-section__card .member-section__card-img {
@@ -259,6 +295,7 @@ body {
   height: 20rem;
   transition: scale 0.2s ease-in;
   background-repeat: no-repeat;
+  border-radius: var(--main-border-radius);
 }
 
 /* 권경열 멤버카드 사진 */
