--- a/css/kang.css
+++ b/css/kang.css
@@ -1,5 +1,5 @@
 body {
-    width: 1500px;
+    width: 100%;
     background-color: #ffcccc;
 }
 
@@ -7,11 +7,11 @@ body {
 .wrap {
     display: block;
     background-color: #f5f6fa;
-    width: 1100px;
+    width: 75%;
     position: absolute;
-    border-radius: 25px;
+    border-radius: 3rem;
     left: 15%;
-    top: 150px;
+    top: 20%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     overflow: hidden; /* 높이가 넘칠 경우 스크롤이 생기지 않도록 설정 */
 }
