--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Space+Mono:wght@400;700&display=swap");
 /*intel*/
 @import url("https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Inter:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Space+Mono:wght@400;700&display=swap");
+/*소요단풍체*/
+@font-face {
+  font-family: "SOYOMapleBoldTTF";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/SOYOMapleBoldTTF.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+/*땅스부대찌개*/
+@font-face {
+  font-family: "TTTtangsbudaejjigaeB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/TTTtangsbudaejjigaeB.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
 
 /* Reset */
 body,
@@ -27,6 +41,8 @@ h5 {
   /*font*/
   --nanum-gothic-coding: "Nanum Gothic Coding", cursive;
   --intel: "Inter", sans-serif;
+  --soyo-maple: "SOYOMapleBoldTTF";
+  --tangsbudaejjigae: "TTTtangsbudaejjigaeB";
 
   /* 멤버 카드에 사용하는 컬러 변수*/
   --member-card-bg-color: #fff;
@@ -39,6 +55,7 @@ h5 {
   --main-bg-color: #db0606;
   --swiper-theme-color: #fbc531;
   --swiper-pagination-bullet-inactive-color: white;
+  --header-main-text-color: #ffc700;
 
   /*slider bg color*/
   --slider-bg-color: #151717;
@@ -77,7 +94,7 @@ body {
 }
 
 .main-header .main-header__temp {
-  height: 50rem;
+  height: auto;
   position: relative;
 }
 
@@ -96,27 +113,30 @@ body {
   background-position: 50% 50%;
   width: 11%;
   height: 10%;
-  top: -5.5rem;
+  top: 0;
   right: 2.7rem;
 }
 
-.main-header .main-text {
-  position: relative;
-  background-image: url("../images/main/mainText.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 8rem 0 0 8rem;
-  height: 45%;
+.main-header {
+  font-family: var(--tangsbudaejjigae);
+  padding: 0 5rem;
 }
 
-.main-header .main-text-02 {
+.main-header .main-text h1,
+.main-header .main-text-02 h1 {
+  font-size: 30rem;
+  margin: 0;
+}
+.main-header .main-text h1 {
+  margin-top: 7rem;
+  text-align: left;
+  color: var(--header-main-text-color);
+}
+
+.main-header .main-text-02 h1 {
+  text-align: right;
+  margin-top: 5rem;
   position: relative;
-  background-image: url("../images/main/maingText_02.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 10rem 0 0 65rem;
-  width: 55%;
-  height: 50%;
   z-index: 2;
 }
 
@@ -148,12 +168,9 @@ body {
 .swiper-slide {
   box-sizing: border-box;
   padding: 2rem 10rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: var(--slider-bg-color);
   color: var(--member-area-font-color);
+  font-family: var(--soyo-maple);
 }
 
 .slide1-h1,
@@ -161,12 +178,12 @@ body {
   color: var(--member-area-font-color) !important;
   text-align: center;
   font-weight: bold;
-  font-size: 5rem;
+  font-size: 5.2rem;
 }
 
 .slide1-p,
 .slide2-p {
-  font-size: 3rem;
+  font-size: 3.2rem;
   line-height: 5rem;
   font-weight: bold;
 }
@@ -177,6 +194,7 @@ body {
   max-width: 100rem;
   display: flex;
   flex-direction: column;
+  font-family: var(--tangsbudaejjigae);
 }
 
 .member-section .member-section__cards > div:first-child {
@@ -204,7 +222,6 @@ body {
   font-weight: bold;
   color: var(--member-area-font-color);
   text-align: center;
-  font-family: var(--nanum-gothic-coding);
   margin-top: -1.5rem;
 }
 
@@ -239,8 +256,8 @@ body {
 .member-section .member-section__cards > div:first-child > .spiral-image {
   width: 10rem;
   height: 10rem;
-  bottom: 19rem;
-  left: 36rem;
+  bottom: 13rem;
+  left: 36.4rem;
   position: absolute;
   z-index: 0;
 }
@@ -380,7 +397,7 @@ body {
 
 .member-section__like-cardarea {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin: 6rem 0;
 }
 
@@ -388,7 +405,6 @@ body {
   cursor: pointer;
   box-shadow: 3px 5px 3px 3px black;
   margin: 0.5rem;
-  margin-right: 3.3rem;
   padding-top: 0.5rem;
   border-radius: 0.5rem;
 }
@@ -445,7 +461,7 @@ body {
 }
 
 .member-section__likes .member-section__like-area .member-section__like-area-title {
-  font-size: 4.5rem;
+  font-size: 6.5rem;
   padding-left: 3rem;
   font-weight: 700;
   line-height: 1.5;
@@ -454,14 +470,14 @@ body {
 }
 
 .member-section__likes .member-section__like-area .member-section__like-area-keyword {
-  color: var(--member-card-bg-color);
+  color: var(--header-main-text-color);
 }
 
 .member-section__likes .member-section__like-area .member-section__like-area-underline {
   width: 18rem;
   position: absolute;
-  top: 18rem;
-  left: 20rem;
+  top: 23rem;
+  left: 23rem;
 }
 
 .member > canvas {
