--- a/css/index.css
+++ b/css/index.css
@@ -306,6 +306,7 @@ body {
   padding: 1rem;
   box-shadow: -3px 5px 3px 2px black;
   border-radius: var(--main-border-radius);
+  overflow: hidden;
 }
 
 .member-section .member-section__cards .member-section__card .member-section__card-img {
@@ -349,7 +350,7 @@ body {
 }
 
 .member-section .member-section__cards .member-section__card .member-section__card-img:hover {
-  scale: 110%;
+  scale: 120%;
 }
 
 .member-section .member-section__cards .member-section__card .member-section__card__info {
